# oisy-wallet

./: .dockerignore  .env.e2e  .env.example  .env.test  .eslintcache  .eslintignore  .eslintrc.cjs  .gitignore  .ls-lint.yml  .oxlintrc.test.json  .prettierignore  .prettierrc  0002-divide-balance-into-pending-available-and-total.md  AGENTS.md  ARCHITECTURE-SPLIT-PROPOSAL.md  CANBENCH_ANALYSIS.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile.e2e  Dockerfile.frontend  FRONTEND_PERFORMANCE_REPORT.md  HACKING.md  HOW-TO.md  LICENSE  LINUX.md  LOOP_IMPORTS.md  MACOS.md  MEMORY_TEST_FLAGS.md  README.md  SECURITY.md  SIGNER_DOMAINS.md  TIPS.md  WINDOWS.md  audit-index.html  canbench.yml  canbench_results.csv  canbench_results.yml  canister_e2e_ids.json  (+50 more)
.claude/: compassionate-curie-dirty.patch
.config/: spellcheck.dic
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  release-drafter.yml  release_template.md
.storybook/: README.md  main.ts  preview.ts
src/airdrop/: Cargo.toml  README.md  airdrop.did
src/airdrop/src/: error.rs  guards.rs  lib.rs  logic.rs  state.rs  test.rs  utils.rs
src/airdrop/src/tests/: admins.txt  code.txt  managers.txt  mod.rs  users.txt
src/backend/: Cargo.toml  backend.did
src/backend/migrations/: v1_add_contacts.ts  v2_add_contacts_fields.ts
src/backend/src/: address.rs  alile.rs  assertions.rs  benchmark.rs  bind.rs  bitcoin_api.rs  bitcoin_lib.rs  bitcoin_utils.rs  bitcoun_utils.rs  bounded_vec.rs  btc_user_pending_tx_model.rs  canister_sig_verification.rs  config.rs  contact.rs  contacts.rs  contacts_model.rs  delegation.rs  exchange.rs  guards.rs  housekeeping.rs  http.rs  impls.rs  lib.rs  memory.rs  metrics.rs  migrate.rs  new.rs  oisy_user.rs  p2pkh.rs  p2wpkh.rs  pow.rs  random.rs  rate_limiter.rs  result_types.rs  security_pow.rs  signer.rs  state.rs  std_canister_status.rs  tests.rs  token.rs  (+4 more)
src/backend/src/active_user_transactions/: model.rs
src/backend/src/api/: active_user_transactions.rs  admin.rs  api_keys.rs  bitcoin.rs  contacts.rs  custom_tokens.rs  exchange.rs  mod.rs  onramper.rs  personal_note_shares.rs  personal_notes.rs  pow.rs  signer.rs  transactions.rs  user_profile.rs
src/backend/src/api/transactions/: eth.rs  mod.rs
src/backend/src/bind/: cycles_ledger.rs
src/backend/src/bitcoin/: api.rs  mod.rs  pending_tx_model.rs  utils.rs
src/backend/src/contacts/: contacts.did  mod.rs  service.mo  service.rs  store.mo  types.mo
src/backend/src/exchange/: coingecko.rs  composite.rs  cost_log.rs  mod.rs  provider.rs  supplemental.rs
src/backend/src/exchange/providers/: mod.rs
src/backend/src/exchange/providers/coingecko/: client.rs  mod.rs  platform.rs
src/backend/src/exchange/providers/icpswap/: mod.rs
src/backend/src/heap_state/: btc_user_pending_tx_state.rs  heap_state.rs  mod.rs  state.rs
src/backend/src/migrate/: new.rs  new2.rs  steps.rs
src/backend/src/onramper/: mod.rs  model.rs  service.rs
src/backend/src/personal_notes/: mod.rs  service.rs
src/backend/src/personal_notes/share/: mod.rs  model.rs  service.rs
src/backend/src/pow/: challenge.rs  mod.rs
src/backend/src/signer/: mod.rs  service.rs
src/backend/src/sol/: mod.rs  sol_api.rs
src/backend/src/state/: memory.rs  mod.rs  stored_token_migration.rs
src/backend/src/status/: cache.rs  metrics.rs  mod.rs
src/backend/src/token/: activity.rs  mod.rs  service.rs
src/backend/src/transactions/: mod.rs  model.rs
src/backend/src/transactions/eth/: mod.rs  scheduler.rs  service.rs
src/backend/src/transactions/providers/: mod.rs
src/backend/src/transactions/providers/etherscan/: mod.rs  types.rs
src/backend/src/types/: maps.rs  mod.rs  storable.rs
src/backend/src/user_profile/: activity.rs  mod.rs  model.rs  service.rs
src/backend/src/utils/: guards.rs  housekeeping.rs  http.rs  http_outcall.rs  mod.rs  random.rs  rate_limiter.rs
src/backend/tests/: address_test.rs  integration_test.rs  token_test.rs  upgrade_test.rs  utils.rs
src/backend/tests/it/: active_user_transactions.rs  address.rs  agreements.rs  bitcoin.rs  config.rs  contacts.rs  custom_token.rs  exchange.rs  get_users.rs  guard.rs  list_user_creation_timestamps.rs  list_users.rs  main.rs  migration.rs  onramper.rs  personal_note_shares.rs  personal_notes.rs  pow.rs  security_pow.rs  settings.rs  sign.rs  signer.rs  stats.rs  status.rs  token.rs  transactions.rs  upgrade.rs  user_credentials.rs  user_profile.rs  user_token.rs
src/backend/tests/it/contacts/: mod.rs  update_contact.rs
src/backend/tests/it/settings/: dapp_settings.rs  experimental_features_settings.rs  mod.rs  networks_settings.rs  testnets_settings.rs  transaction_filter_settings.rs
src/backend/tests/it/signer/: top_up.rs
src/backend/tests/it/upgrade/: constants.rs  credentials_init_args.rs  impls.rs  mod.rs  token_enabled.rs  token_version.rs  types.rs
src/backend/tests/it/utils/: assertion.rs  asserts.rs  ii.rs  mock.rs  mod.rs  pocketic.rs
src/backend/tests/it/utils/pocketic/: pic_canister.rs
src/backend/tests/utils/: mod.rs  pocketic.rs
src/shared/: Cargo.toml
src/shared/src/: backend_api.rs  http.rs  impls.rs  lib.rs  metrics.rs  serializers.rs  std_canister_status.rs  types.rs  validate.rs
src/shared/src/types/: account.rs  active_user_transaction.rs  address_type.rs  agreement.rs  api_keys.rs  backend_config.rs  bitcoin.rs  contact.rs  custom_token.rs  dapp.rs  delegation.rs  eth_transaction.rs  exchange.rs  exchange_cost.rs  experimental_feature.rs  migration.rs  network.rs  notification.rs  number.rs  onramper.rs  personal_note.rs  personal_note_share.rs  pow.rs  result_types.rs  settings.rs  signer.rs  snapshot.rs  stored_transaction.rs  tests.rs  token.rs  token_id.rs  token_standard.rs  transaction.rs  transaction_settings.rs  user_profile.rs  user_transaction.rs  verifiable_credential.rs
src/shared/src/types/account/: conversion.rs
src/shared/src/types/account/conversion/: tests.rs
src/shared/src/types/bitcoin/: impls.rs
src/shared/src/types/user_profile/: impls.rs
src/shared/src/validate/: tests.rs
(+6065 files in other folders)
