[workspace]
members = [
    "src/backend",
    "src/cycles_ledger/client",
    "src/cycles_ledger/pic",
    "src/cycles_ledger/types",
    "src/shared"
]
resolver = "2"

[workspace.dependencies]
bs58 = "0.5.1"
ic-cdk = "0.16.1"
ic-cdk-macros = "0.16.0"
ic-cdk-timers = "0.9.0"
ic-cycles-ledger-client = { path = "src/cycles_ledger/client" }
ic-cycles-ledger-pic = { path = "src/cycles_ledger/pic" }
ic-cycles-ledger-types = { path = "src/cycles_ledger/types" }
ic-ledger-types = "0.13.0"
ic-stable-structures = "0.6.9"
ic-metrics-encoder = "1.1.1"
ic-canister-sig-creation = "1.1.0"
ic-verifiable-credentials = "1.0.1"
candid = "0.10.18"
candid_parser = "0.1"
ethers-core = "= 2.0.11"
futures = "0.3"
serde = "1"
serde_bytes = "0.11"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
sha2 = "0.10.9"
k256 = "0.13"
lazy_static = "1.5.0"
# dfx 0.26.1 bundles pocket-ic server 8.0 which uses pocket-ic library 7.0
# See:
# Server version: ~/.cache/dfinity/versions/0.26.0/pocket-ic --version
# Library version: https://docs.google.com/document/d/1VYmHUTjrgbzRHtsAyRrI5cj-gWGs7ktTnutPvUMJioU/edit?pli=1&tab=t.0#heading=h.5wf28dvt742x
pocket-ic = "7.0"
pretty_assertions = "1.4.1"
strum = "0.26.3"
strum_macros = "0.26.4"
bitcoin = "0.32.7"
paste = "1.0.15"

[workspace.lints.rust]
deprecated = "allow" # Why is this allowed?
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
struct_field_names = "allow"
