[workspace]
members = [
    "src/backend",
    "src/cycles_ledger/client",
    "src/cycles_ledger/pic",
    "src/cycles_ledger/types",
    "src/shared"
]
resolver = "2"

[workspace.dependencies]
bs58 = "0.5"
ic-cdk = "0.18.7"
ic-cdk-timers = "0.12.3"
canbench-rs = { version = "0.2.0" }
ic-cycles-ledger-client = { path = "src/cycles_ledger/client" }
ic-cycles-ledger-pic = { path = "src/cycles_ledger/pic" }
ic-cycles-ledger-types = { path = "src/cycles_ledger/types" }
ic-ledger-types = "0.15.0"
ic-stable-structures = "0.7"
ic-metrics-encoder = "1.1"
ic-canister-sig-creation = "1.3"
ic-verifiable-credentials = "1.0"
candid = "0.10.24"
candid_parser = "0.3"
serde = "1"
serde_bytes = "0.11"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
sha2 = "0.10"
lazy_static = "1.5"
# pocket-ic server 12.0 uses pocket-ic library 12.0
# See:
# Server version: https://github.com/dfinity/pocketic/releases/tag/12.0.0
# Library version: https://docs.rs/pocket-ic/12.0.0
pocket-ic = "12.0.0"
pretty_assertions = "1.4"
bitcoin = "0.32"
paste = "1.0"

[workspace.lints.rust]
deprecated = "allow" # Why is this allowed?
warnings = "deny"
unused_attributes = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
allow_attributes = "warn"
module_name_repetitions = "allow"
struct_field_names = "allow"
