[package]
name = "airdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.3"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
ic-cdk-timers = "0.4"
serde = { version = "1.0", features = ["derive"] }
ic-metrics-encoder = "1.1.0"
serde_bytes = "0.11"

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
