[package]
name = "backend"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
candid.workspace = true
serde.workspace = true
serde_bytes.workspace = true
ic-stable-structures = "0.6.4"
ethers-core = "= 2.0.11"
futures = "0.3"
k256 = "0.13"
hex = "0.4"
getrandom = { version = "0.2", features = ["custom"] }
shared = { path = "../shared" }
regex = "1.10.4"

[dev-dependencies]
lazy_static = "1.4.0"
pocket-ic = "2.2.0"
