[package]
name = "backend"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ethers-core = "= 2.0.11"
futures = "0.3"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = "0.6.4"
k256 = "0.13"
serde = { workspace = true }
serde_bytes = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
lazy_static = "1.4.0"
pocket-ic = "2.2.0"
