[package]
name = "backend"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = { workspace = true }
candid = { workspace = true }
ethers-core = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-cycles-ledger-client = { workspace = true }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
ic-verifiable-credentials = { workspace = true }
k256 = { workspace = true }
lazy_static = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
candid_parser = { workspace = true }
lazy_static = { workspace = true }
pocket-ic = { workspace = true }

[lints]
workspace = true
