[package]
name = "shared"
version = "0.0.2"
edition = "2021"

[dependencies]
candid = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-verifiable-credentials = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

