[package]
name = "shared"
version = "0.0.2"
edition = "2021"

[dependencies]
bs58 = { workspace = true }
candid = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-cycles-ledger-client = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-verifiable-credentials = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[dev-dependencies]
paste = { workspace = true }

[lints]
workspace = true
